force-app/main/default/objects/GRMS_Survey__c/fields/Any_HH_Member_Missing__c.field-meta.xml
<CustomField>
    <fullName>Any_HH_Member_Missing__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <label>Any HH Member Missing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>