force-app/main/default/objects/GRMS_Survey__c/fields/Appetite__c.field-meta.xml
<CustomField>
    <fullName>Appetite__c</fullName>
    <description>How is your appetite? (GRMS homecare sample survey)</description>
    <inlineHelpText>How is your appetite?</inlineHelpText>
    <label>Appetite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>