force-app/main/default/objects/GRMS_Survey__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>GRMS sample survey</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>