force-app/main/default/objects/GRMS_Survey__c/fields/Contact_Text__c.field-meta.xml
<CustomField>
    <fullName>Contact_Text__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <inlineHelpText>Email to use for Texting</inlineHelpText>
    <label>Contact Text</label>
    <type>Email</type>
</CustomField>