force-app/main/default/objects/GRMS_Survey__c/fields/Contact_WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>Contact_WhatsApp__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <inlineHelpText># to contact you on WhatsApp</inlineHelpText>
    <label>Contact WhatsApp</label>
    <type>Phone</type>
</CustomField>