force-app/main/default/objects/GRMS_Survey__c/fields/Contacted_by_Another_Org__c.field-meta.xml
<CustomField>
    <fullName>Contacted_by_Another_Org__c</fullName>
    <description>Text Area (Long)</description>
    <inlineHelpText>Have you been contacted or reached out to by another org to assist you?</inlineHelpText>
    <label>Contacted by Another Org?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>