force-app/main/default/objects/GRMS_Survey__c/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <description>GRMS homecare sample survey</description>
    <inlineHelpText>Full name of this respondent&apos;s emergency contact</inlineHelpText>
    <label>Emergency Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>