force-app/main/default/objects/GRMS_Survey__c/fields/Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone__c</fullName>
    <description>GRMS homecare sample survey</description>
    <inlineHelpText>Phone number of this respondent&apos;s emergency contact</inlineHelpText>
    <label>Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>