force-app/main/default/objects/GRMS_Survey__c/fields/Financial_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Financial_Support_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you need Financial Support? (GRMS homecare sample survey)</description>
    <inlineHelpText>Do you need financial support?</inlineHelpText>
    <label>Financial Support Needed?</label>
    <type>Checkbox</type>
</CustomField>