force-app/main/default/objects/GRMS_Survey__c/fields/Financial_Support_Needs__c.field-meta.xml
<CustomField>
    <fullName>Financial_Support_Needs__c</fullName>
    <description>What kind of Financial Support do you need? (GRMS homecare sample survey)</description>
    <inlineHelpText>What kind of financial support do you need?</inlineHelpText>
    <label>Financial Support Needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>