force-app/main/default/objects/GRMS_Survey__c/fields/Food_Delivery_Assistance_Needed__c.field-meta.xml
<CustomField>
    <fullName>Food_Delivery_Assistance_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you need food delivery assistance? (GRMS homecare sample survey)</description>
    <inlineHelpText>Do you need food delivery assistance?</inlineHelpText>
    <label>Food Delivery Assistance Needed?</label>
    <type>Checkbox</type>
</CustomField>