force-app/main/default/objects/GRMS_Survey__c/fields/Food_Needed_in_Next_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Food_Needed_in_Next_Delivery__c</fullName>
    <description>What kind of food do you need delivered next time? (GRMS homecare sample survey)</description>
    <inlineHelpText>What kind of food do you need delivered next time?</inlineHelpText>
    <label>Food Needed in Next Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>