force-app/main/default/objects/GRMS_Survey__c/fields/Food_Now__c.field-meta.xml
<CustomField>
    <fullName>Food_Now__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <inlineHelpText>List immediate food needs</inlineHelpText>
    <label>Food Now?</label>
    <type>TextArea</type>
</CustomField>