force-app/main/default/objects/GRMS_Survey__c/fields/Form_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Insurance__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <inlineHelpText>If both, add the insurance providers below.</inlineHelpText>
    <label>Form of Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homeowners Insurance</fullName>
            </value>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>No Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>