force-app/main/default/objects/GRMS_Survey__c/fields/GRMS_FieldWorker__c.field-meta.xml
<CustomField>
    <fullName>GRMS_FieldWorker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Worker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Surveys Administered for the Field Workers</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>