force-app/main/default/objects/GRMS_Survey__c/fields/GRMS_SurveyDate__c.field-meta.xml
<CustomField>
    <fullName>GRMS_SurveyDate__c</fullName>
    <description>Date when the survey is locally created</description>
    <label>Survey Date</label>
    <type>Date</type>
</CustomField>