force-app/main/default/objects/GRMS_Survey__c/fields/GRMS_UserContact__c.field-meta.xml
<CustomField>
    <fullName>GRMS_UserContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Field Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>