force-app/main/default/objects/GRMS_Survey__c/fields/Health_Comments__c.field-meta.xml
<CustomField>
    <fullName>Health_Comments__c</fullName>
    <description>Additional comments about your health (GRMS homecare sample survey)</description>
    <inlineHelpText>Any additional comments about your health?</inlineHelpText>
    <label>Health Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>