force-app/main/default/objects/GRMS_Survey__c/fields/HH_Member_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>HH_Member_Birthdate__c</fullName>
    <description>GRMS post-diaster worker sample survey</description>
    <inlineHelpText>Repeating</inlineHelpText>
    <label>HH Member Birthdate</label>
    <type>Date</type>
</CustomField>