force-app/main/default/objects/GRMS_Survey__c/fields/Lives_With__c.field-meta.xml
<CustomField>
    <fullName>Lives_With__c</fullName>
    <description>GRMS homecare sample survey</description>
    <inlineHelpText>If you live with others, what is your relationship with them?</inlineHelpText>
    <label>Lives With</label>
    <length>255</length>
    <type>Text</type>
</CustomField>