force-app/main/default/objects/GRMS_Survey__c/fields/Materials_Needed_to_Make_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Materials_Needed_to_Make_Repairs__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <inlineHelpText>List tools and materials needed to complete repairs</inlineHelpText>
    <label>Materials Needed to Make Repairs</label>
    <type>TextArea</type>
</CustomField>