force-app/main/default/objects/GRMS_Survey__c/fields/Medical_Needs_Now__c.field-meta.xml
<CustomField>
    <fullName>Medical_Needs_Now__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <inlineHelpText>List immediate medical concerns or requirements</inlineHelpText>
    <label>Medical Needs Now?</label>
    <type>TextArea</type>
</CustomField>