force-app/main/default/objects/GRMS_Survey__c/fields/Medication_Needs_Now__c.field-meta.xml
<CustomField>
    <fullName>Medication_Needs_Now__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <inlineHelpText>List any urgent missing medications</inlineHelpText>
    <label>Medication Needs Now?</label>
    <type>TextArea</type>
</CustomField>