force-app/main/default/objects/GRMS_Survey__c/fields/Mental_Emotional_Health__c.field-meta.xml
<CustomField>
    <fullName>Mental_Emotional_Health__c</fullName>
    <description>Rate your mental/emotional health (GRMS homecare sample survey)</description>
    <inlineHelpText>General assessment of mental/emotional health</inlineHelpText>
    <label>Mental/Emotional Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>