force-app/main/default/objects/GRMS_Survey__c/fields/Mental_Health_Needs_Now__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Needs_Now__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <inlineHelpText>List urgent mental health issues</inlineHelpText>
    <label>Mental Health Needs Now?</label>
    <type>TextArea</type>
</CustomField>