force-app/main/default/objects/GRMS_Survey__c/fields/My_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>My_Test_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>My Test Field</label>
    <type>Checkbox</type>
</CustomField>