force-app/main/default/objects/GRMS_Survey__c/fields/Name_of_Org_You_re_Connected_With__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Org_You_re_Connected_With__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <label>Name of Org You&apos;re Connected With</label>
    <length>150</length>
    <type>Text</type>
</CustomField>