force-app/main/default/objects/GRMS_Survey__c/fields/Name_ph_email_of_person_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Name_ph_email_of_person_to_contact__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <inlineHelpText>Add at least one way to contact the person</inlineHelpText>
    <label>Name/ph#/email of person to contact</label>
    <type>TextArea</type>
</CustomField>