force-app/main/default/objects/GRMS_Survey__c/fields/Names_of_any_missing_persons__c.field-meta.xml
<CustomField>
    <fullName>Names_of_any_missing_persons__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <inlineHelpText>List any and all missing HH members or others you know are missing</inlineHelpText>
    <label>Names of any missing persons</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>