force-app/main/default/objects/GRMS_Survey__c/fields/Need_to_contact_anyone_outside_the_HH__c.field-meta.xml
<CustomField>
    <fullName>Need_to_contact_anyone_outside_the_HH__c</fullName>
    <description>GRMS post-disaster worker sample survey</description>
    <label>Need to contact anyone outside the HH?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>