force-app/main/default/objects/GRMS_Survey__c/fields/Num_of_HH_Members_in_the_Home__c.field-meta.xml
<CustomField>
    <fullName>Num_of_HH_Members_in_the_Home__c</fullName>
    <description>GRMS post-diaster worker sample survey</description>
    <label>Num of HH Members in the Home</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>