force-app/main/default/objects/GRMS_Survey__c/fields/Nutrition_Advice_Needed__c.field-meta.xml
<CustomField>
    <fullName>Nutrition_Advice_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you need Nutrition Advice? (GRMS homecare sample survey)</description>
    <inlineHelpText>Do you need nutrition advice?</inlineHelpText>
    <label>Nutrition Advice Needed?</label>
    <type>Checkbox</type>
</CustomField>