force-app/main/default/objects/GRMS_Survey__c/fields/Nutrition_Support_Needs__c.field-meta.xml
<CustomField>
    <fullName>Nutrition_Support_Needs__c</fullName>
    <description>What kind of Nutrition Support do you need? (GRMS homecare sample survey)</description>
    <inlineHelpText>What kind of nutrition support do you need?</inlineHelpText>
    <label>Nutrition Support Needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>