force-app/main/default/objects/GRMS_Survey__c/fields/Other_Comments__c.field-meta.xml
<CustomField>
    <fullName>Other_Comments__c</fullName>
    <description>Any other comments? (GRMS homecare sample survey)</description>
    <inlineHelpText>Any other comments?</inlineHelpText>
    <label>Other Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>