force-app/main/default/objects/GRMS_Survey__c/fields/Overall_Health__c.field-meta.xml
<CustomField>
    <fullName>Overall_Health__c</fullName>
    <description>Rate your overall health (GRMS homecare sample survey)</description>
    <inlineHelpText>General assessment of physical health</inlineHelpText>
    <label>Overall Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>