force-app/main/default/objects/GRMS_Survey__c/fields/Resides__c.field-meta.xml
<CustomField>
    <fullName>Resides__c</fullName>
    <description>Do others live with you in the household? (GRMS homecare sample survey)</description>
    <inlineHelpText>Any household members who currently live with you?</inlineHelpText>
    <label>Resides</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alone</fullName>
            </value>
            <value>
                <fullName>With Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>