force-app/main/default/objects/GRMS_Survey__c/fields/Respondant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Respondant_First_Name__c</fullName>
    <label>Respondant First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>