force-app/main/default/objects/GRMS_Survey__c/fields/Respondant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Respondant_Last_Name__c</fullName>
    <description>Respondant First Name for GRMS sample survey</description>
    <label>Respondant Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>