force-app/main/default/objects/GRMS_Survey__c/fields/Respondent_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Respondent_First_Name__c</fullName>
    <label>Respondent First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>