force-app/main/default/objects/GRMS_Survey__c/fields/Role_in_Family__c.field-meta.xml
<CustomField>
    <fullName>Role_in_Family__c</fullName>
    <description>GRMS post-diaster worker sample survey</description>
    <label>Role in Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Head of Household</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Visitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>