force-app/main/default/objects/GRMS_Survey__c/recordTypes/Disaster_Relief.recordType-meta.xml
<RecordType>
    <fullName>Disaster_Relief</fullName>
    <active>true</active>
    <description>GRMS Record Type For a Sample Survey</description>
    <label>Disaster Relief</label>
</RecordType>