force-app/main/default/objects/GRMS_Survey__c/recordTypes/Homecare.recordType-meta.xml
<RecordType>
    <fullName>Homecare</fullName>
    <active>true</active>
    <description>GRMS Homecare survey</description>
    <label>Homecare</label>
</RecordType>